App/Ingress/10-ingress-class-ejemplo-2.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ejemplo2
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx.org/ingress-controller
