App/Ingress/01-cake-shop-web-app-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cake-shop-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cake-shop-web
  template:
    metadata:
      labels:
        app: cake-shop-web
    spec:
      containers:
      - name: cake-shop-web
        image: ilvingr/cake-shop-web:cake-shop-web-iv
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
