App/Ingress/02-hello-app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  namespace: hola-mundo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-v2
  template:
    metadata:
      labels:
        app: hello-v2
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
