App/Ingress/02-ice-cream-web-app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ice-cream-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ice-cream-web
  template:
    metadata:
      labels:
        app: ice-cream-web
    spec:
      containers:
      - name: ice-cream-web
        image: ilvingr/ice-cream-web:ice-cream-web-iv
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
