App/Ingress/04-hello-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
  namespace: hola-mundo
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
