App/Ingress/09-ingress-controler-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ejemplo2
  namespace: nginx-ingress
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress
