App/Ingress/08-ingress-2-ejemplo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: v1.ejemplo2.local
    http:
      paths:
      - path: /cake
        pathType: Prefix
        backend:
          service:
            name: cake-shop-web-v1-svc
            port:
              number: 8080
      - path: /icecream
        pathType: Prefix
        backend:
          service:
            name: ice-cream-web-v2-svc
            port:
              number: 8080
